# PhyXIT

./: README.md
.github/workflows/: main.yml
Bot/: Dockerfile  fly.toml  main.py  pyproject.toml
Bot/src/: BotController.py  Image.py  VisualCrossingHandler.py  graphic.py  main.py  weather.py  weatherImager.py
ESP32/SensorData/: SensorData.cpp  SensorData.h
ESP32/libraries/SensorData/: SensorData.cpp  SensorData.h
ESP32/sensorsIn/: README.txt  sensorsIn.ino
SensorData/: SensorData.cpp  SensorData.h  keywords.txt
SensorData/src/: SensorData.cpp  SensorData.h
sensorsIn/: sensorsIn.ino
