[tool.poetry]
name = "PhySIX-bot-dependencies"
version = "0.1"
description = "PhySIX project python bot dependencies"
authors = ["Sara MESSARA <sara.messara@univ-tlse3.fr>", "Clément PAGES <clement.pages1@univ-tlse3.fr>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
PyNaCl = "^1.5.0"
nest-asyncio = "^1.5.5"
numpy = "^1.23.2"
Pillow = "^9.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
